Bug 142758 - Fileopen XLS: Borderline display is incorrect from LO 7.2 Alpha1 (XLSX OK)
Summary: Fileopen XLS: Borderline display is incorrect from LO 7.2 Alpha1 (XLSX OK)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.2.0.0 alpha1+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.2.0
Keywords: bibisected, bisected, filter:xls, regression
Depends on:
Blocks:
 
Reported: 2021-06-10 10:33 UTC by qve00761
Modified: 2021-06-14 12:36 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Bordered xls format file (31.50 KB, application/vnd.ms-excel)
2021-06-10 10:35 UTC, qve00761
Details
Capture (178.97 KB, application/vnd.oasis.opendocument.spreadsheet)
2021-06-10 10:38 UTC, qve00761
Details

Note You need to log in before you can comment on or make changes to this bug.
Description qve00761 2021-06-10 10:33:21 UTC
Description:
When reading a file in xls format with LO7.2.Alpha1, the borderline display is incorrect.
This issue does not occur in LO 7.1.3.

Steps to Reproduce:
1.Open the attachment xlsx file in CALC( LO7.2 Alpha1). 
2.Many ruled lines for which output is not specified are displayed.


Actual Results:
Many ruled lines for which output is not specified are displayed.

Expected Results:
Ruled lines are displayed as when opening the attachment file with LO 7.1.3. or MS EXCEL.


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.2.0.0.alpha1+ (x86) / LibreOffice Community
Build ID: 3b57ebb445df8a2bc3d916ea79f8af45e20e4e62
CPU threads: 4; OS: Windows 10.0 Build 19041; UI render: Skia/Raster; VCL: win
Locale: ja-JP (ja_JP); UI: en-US
Calc: threaded
Comment 1 qve00761 2021-06-10 10:35:37 UTC
Created attachment 172760 [details]
Bordered xls format file

The borders are incorrect in this file.
Comment 2 qve00761 2021-06-10 10:38:04 UTC
Created attachment 172761 [details]
Capture

This is a screen capture when the attachment file is opened in LO7.1.3 and LO7.2 Alpha1.
Comment 3 qve00761 2021-06-10 10:59:34 UTC
> Steps to Reproduce:
> 1.Open the attachment xlsx file in CALC( LO7.2 Alpha1). 
> 2.Many ruled lines for which output is not specified are displayed.

Not xlsx, but xls.
I made a mistake. sorry.
Comment 4 Timur 2021-06-10 13:45:42 UTC
commit a968e8c112c0efad554e4c3d39fb7b90a75f67b8
Date:   Sun Apr 11 15:02:14 2021 +0200
    source 7c2e6058439da9d061e5e0bbd07c8b6d4f2ffcbf
    previous e5a4149fb909cd1c28488d2d88534b59df738339

author	Caolán McNamara <caolanm@redhat.com>	2021-04-11 11:08:40 +0100
committer	Caolán McNamara <caolanm@redhat.com>	2021-04-11 14:48:18 +0200
require only as much remaining data as is necessary

Hi Caolán , please see.
Comment 5 m_a_riosv 2021-06-10 22:19:21 UTC Comment hidden (obsolete)
Comment 6 Timur 2021-06-11 06:37:06 UTC
(In reply to m.a.riosv from comment #5)
> Sorry, what lines, in excel they look lighter, but they are there.

There's screenshot in comment 2. Very nice report. Only screenshot better be single image like PNG with before and after, not in ODT like here.
Comment 7 Commit Notification 2021-06-11 11:49:03 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b1d19950d3f89460109dfc0e3720ac22d4307ff8

Resolves: tdf#142758 Revert record parse misunderstanding

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Timur 2021-06-14 12:36:02 UTC
Thanks. 
There's another fileopen bug 79788 for proper reading of dashed lines (somehow duplicate to filesave bug 79787).