Resolves: tdf#142758 Revert record parse misunderstanding

of 'Related: cid#1474351 Untrusted loop bound'

and add in documentation for the records

This reverts commit 2134d83b8d6e73ca8eacd812eb3431bff38c74f6.
This reverts commit 7c2e6058439da9d061e5e0bbd07c8b6d4f2ffcbf.
This reverts commit 3748fe3e4fc22a400b3120010192b75754e38b17.

Change-Id: I5b407eb4388a8d67fc863cc6070fbbf8b15321d9